Update elasticsearch.md